--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="shortcut icon" href="img/faviconP.ico" type="image/x-icon">
     <title>Finanzas</title>
 </head>
 <body>
-    <section class="main-section">
-        <div>
-            <h1>Presupuesto de <br><span id="mes-actual"></span></h1>
-            <p class="total-presupuesto" id="total-presupuesto">$0.00</p>
-        </div>
-        <div class="card-1 card-ingresos">
-            <h2 class="card-1-titulo">Ingresos</h2>
-            <span class="cantidad" id="ingresos">$0.00</span>
-        </div>
-        <div class="card-1 card-egresos">
-            <h2 class="card-1-titulo">Egresos</h2>
-            <span class="cantidad" id="egresos">$0.00</span>
-        </div>
-        <div class="container-porcentaje">
-            <span>Porcentaje de gastos:</span>
-            <span class="porcentaje" id="porcentaje">0%</span>
-        </div>
-    </section>
+    <div class="container-section">
+        <section class="main-section">
+            <div>
+                <h1>Presupuesto de <br><span id="mes-actual"></span></h1>
+                <p class="total-presupuesto" id="total-presupuesto">$0.00</p>
+            </div>
+            <div class="card-1 card-ingresos">
+                <h2 class="card-1-titulo">Ingresos</h2>
+                <span class="cantidad" id="ingresos">$0.00</span>
+            </div>
+            <div class="card-1 card-egresos">
+                <h2 class="card-1-titulo">Egresos</h2>
+                <span class="cantidad" id="egresos">$0.00</span>
+            </div>
+            <div class="container-porcentaje">
+                <span>Porcentaje de gastos:</span>
+                <span class="porcentaje" id="porcentaje">0%</span>
+            </div>
+        </section>
+    </div>
 
     <section class="secondary-section">
         <div class="añadir-transaccion">
@@ -51,10 +54,12 @@
     
             <div id="contenedor-ingresos" class="contenido visible">
                 <!-- Aquí se agregarán las card de transacciones tipo ingreso-->
+                <p id="label-ingreso" class="label">No hay ingresos registrados por el momento.</p>
             </div>
     
             <div id="contenedor-egresos" class="contenido oculto">
                 <!-- Aquí se agregarán las card de transacciones tipo egreso-->
+                <p id="label-egreso" class="label">No hay egresos registrados por el momento.</p>
             </div>
         </div>
     </section>
